--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left:
     - text: "About me"
       href: index.html
+    - text: "Publications"
+      href: publications.html
     - text: "CV"
       href: cv.html
 output:
